Generalizing rules in MenuSelectWidget and fixing `z-index`
Fixing `z-index` regression issue introduces in I1616a6fef72d and
taking the opportunity to generalize and concetanete rules in
MenuSelectWidget.

--- a/src/styles/WindowManager.less
+++ b/src/styles/WindowManager.less
@@ -6,6 +6,7 @@
 		width: 0;
 		height: 0;
 		overflow: hidden;
+		z-index: 4;
 
 		&.oo-ui-window-active {
 			width: auto;
