--- a/src/styles/widgets/CapsuleMultiselectWidget.less
+++ b/src/styles/widgets/CapsuleMultiselectWidget.less
@@ -22,10 +22,5 @@
 		display: inline;
 	}
 
-	> .oo-ui-menuSelectWidget {
-		z-index: 1;
-		width: 100%;
-	}
-
 	.theme-oo-ui-capsuleMultiselectWidget();
 }
