--- a/src/styles/widgets/DropdownWidget.less
+++ b/src/styles/widgets/DropdownWidget.less
@@ -24,10 +24,5 @@
 		cursor: pointer;
 	}
 
-	& > .oo-ui-menuSelectWidget {
-		z-index: 1;
-		width: 100%;
-	}
-
 	.theme-oo-ui-dropdownWidget();
 }
