--- a/src/styles/widgets/MenuSelectWidget.less
+++ b/src/styles/widgets/MenuSelectWidget.less
@@ -2,6 +2,8 @@
 
 .oo-ui-menuSelectWidget {
 	position: absolute;
+	width: 100%;
+	z-index: 4;
 
 	input {
 		position: absolute;
